# quant-qa

./: .gitignore  README.md  pyproject.toml
app/: __main__.py  generate.py  ingest.py  pipeline.py  retrieve.py
src/: embed.py  generate.py  ingest.py  pipeline.py  retrieve.py
